--- a/public/obs-overlay.html
+++ b/public/obs-overlay.html
@@ -140,6 +140,63 @@
       --glow-color: rgba(255, 0, 255, 0.8);
     }
 
+    /* Theme: Realistic (DualSense White - Like real controller) */
+    body.theme-realistic {
+      --body-light: #ffffff;
+      --body-main: #f5f5f5;
+      --body-dark: #e0e0e0;
+      --grip-light: #2a2a2a;
+      --grip-main: #1a1a1a;
+      --grip-dark: #0f0f0f;
+      --stick-light: #1a1a1a;
+      --stick-dark: #0a0a0a;
+      --button-base: #2a2a2a;
+      --button-pressed: #ff3333;
+      --button-border: #3a3a3a;
+      --led-color: #ff3333;
+      --lightbar-color: #ff3333;
+      --triangle-color: #00d9c0;
+      --circle-color: #ff6b7a;
+      --cross-color: #8bb8e8;
+      --square-color: #f9a8d4;
+      --glow-color: rgba(255, 50, 50, 0.8);
+    }
+
+    /* Hide the image-based controller for realistic theme - use SVG instead */
+    body.theme-realistic .realistic-controller {
+      display: none;
+    }
+
+    /* Keep the SVG visible for realistic theme */
+    body.theme-realistic .dualsense-svg {
+      display: block;
+    }
+
+    .realistic-controller {
+      display: none;
+      position: relative;
+      width: 600px;
+      height: auto;
+    }
+
+    .realistic-controller .controller-bg {
+      width: 100%;
+      height: auto;
+      filter: drop-shadow(0 8px 24px rgba(0, 0, 0, 0.5));
+      transition: all 0.1s ease;
+      border-radius: 20px;
+    }
+
+    .realistic-controller.has-input .controller-bg {
+      filter: drop-shadow(0 8px 24px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 30px rgba(0, 150, 255, 0.9)) drop-shadow(0 0 60px rgba(0, 150, 255, 0.5)) brightness(1.15);
+      transform: scale(1.02);
+    }
+
+    /* Hide overlay images - not needed anymore */
+    .realistic-controller .btn-overlay {
+      display: none;
+    }
+
     .controller-body {
       stroke: rgba(0, 0, 0, 0.1);
       stroke-width: 1;
@@ -379,6 +436,7 @@
       <option value="default">DualSense Edge</option>
       <option value="dark">Oscuro</option>
       <option value="neon">Neon</option>
+      <option value="realistic">Realista</option>
     </select>
   </div>
 
@@ -501,6 +559,27 @@
       <rect x="190" y="72" width="140" height="5" rx="2" class="lightbar" />
     </svg>
 
+    <!-- Realistic Controller (Image-based) -->
+    <div class="realistic-controller">
+      <img src="/skins/dualsense_body.png" alt="DualSense" class="controller-bg">
+
+      <!-- Face Buttons Overlay -->
+      <img src="/skins/face_buttons.png" alt="Face Buttons" class="btn-overlay face-buttons-img" id="realistic-face">
+
+      <!-- D-Pad Overlay -->
+      <img src="/skins/dpad.png" alt="D-Pad" class="btn-overlay dpad-img" id="realistic-dpad">
+
+      <!-- Left Stick -->
+      <img src="/skins/analog_stick.png" alt="Left Stick" class="btn-overlay left-stick-img" id="realistic-left-stick">
+
+      <!-- Right Stick -->
+      <img src="/skins/analog_stick.png" alt="Right Stick" class="btn-overlay right-stick-img"
+        id="realistic-right-stick">
+
+      <!-- Triggers -->
+      <img src="/skins/triggers.png" alt="Triggers" class="btn-overlay triggers-img" id="realistic-triggers">
+    </div>
+
     <div id="status" class="connection-status disconnected">
       <span class="status-dot"></span>
       <span id="status-text">Conecta tu control</span>
@@ -526,7 +605,7 @@
     let activeTheme = urlTheme || localStorage.getItem('obs-overlay-theme') || 'default';
 
     // Validate theme
-    if (!['default', 'dark', 'neon'].includes(activeTheme)) {
+    if (!['default', 'dark', 'neon', 'realistic'].includes(activeTheme)) {
       activeTheme = 'default';
     }
 
@@ -588,7 +667,13 @@
       touchpad: document.getElementById('touchpad'),
       ps: document.getElementById('ps'),
       status: document.getElementById('status'),
-      statusText: document.getElementById('status-text')
+      statusText: document.getElementById('status-text'),
+      // Realistic controller elements
+      realisticFace: document.getElementById('realistic-face'),
+      realisticDpad: document.getElementById('realistic-dpad'),
+      realisticLeftStick: document.getElementById('realistic-left-stick'),
+      realisticRightStick: document.getElementById('realistic-right-stick'),
+      realisticTriggers: document.getElementById('realistic-triggers')
     };
 
     let wasConnected = false;
@@ -669,6 +754,20 @@
       toggle(el.options, 'pressed', b[9]?.pressed);
       toggle(el.touchpad, 'pressed', b[17]?.pressed);
       toggle(el.ps, 'pressed', b[16]?.pressed);
+
+      // Realistic controller updates - add glow when any button pressed
+      const anyButtonPressed = b[0]?.pressed || b[1]?.pressed || b[2]?.pressed || b[3]?.pressed ||
+        b[4]?.pressed || b[5]?.pressed || b[6]?.pressed || b[7]?.pressed ||
+        b[8]?.pressed || b[9]?.pressed || b[10]?.pressed || b[11]?.pressed ||
+        b[12]?.pressed || b[13]?.pressed || b[14]?.pressed || b[15]?.pressed ||
+        b[16]?.pressed || b[17]?.pressed ||
+        Math.abs(lx) > 0.3 || Math.abs(ly) > 0.3 ||
+        Math.abs(rx) > 0.3 || Math.abs(ry) > 0.3;
+
+      const realisticContainer = document.querySelector('.realistic-controller');
+      if (realisticContainer) {
+        realisticContainer.classList.toggle('has-input', anyButtonPressed);
+      }
 
       requestAnimationFrame(updateController);
     }
